--- a/Day10 Task/stylesheet1.css
+++ b/Day10 Task/stylesheet1.css
@@ -3,53 +3,47 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    margin: 20px;
-    border: 3px solid grey;
-    padding: 10px;
-    width: 75%;
+
+.container{
+    border: 3px double grey;
+    padding:10px 30px 30px;
+    margin:30px;
+    background-image: linear-gradient(purple,whitesmoke);
     
 }
-
 h1{
-    background-color: bisque;
     text-align: center;
+    background-color:rgb(6, 35, 97);
+    color: whitesmoke;
+    padding: 5px;
 }
 h3{
-    background-color:beige;
+    margin-top: 10px;
+    background-color: beige;
     text-align: center;
-}
-
-.row{
-    border:100px double rgb(79, 143, 6);
-}
-.container{
-    border:3px double gray;
-    padding: 5px;  
-    text-align:end;
-    display: flow-root;
-    background-color: aqua;
-    color: gray;
-}
-label {
-    text-align: center;
-}
-.left{
-    float: left;
-    width: 20%;
-    
+    margin-bottom: 20px;
+    padding: 2px;
 }
 img{
-    border:2px solid black;
-    width:30vw;
-    height: 30vw;
-    padding: 10px;
-    border-radius: 2rem;
+    width:30%;
+    height:30%;
+    margin:5px;
+    border-radius: 50%;
+    float: left; 
+    margin-right: 5%;
+      
 }
-label{
-    font-size: 1.5rem;
+
+.format{
+    margin-bottom: 30px;
+    
+}
+.button{
+    text-align: center;
+    padding: 5px;
+}
+.border{
+    border: 3px double black;
+    padding: 30px;
     margin: 10px;
-}
-input{
-    font-size: 1.5rem;
 }
